--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,5 +1,6 @@
 // Color Variables
-$primary-color: #00AAA1;
+//$primary-color: #00AAA1;
+$primary-color: #007ade;
 $text-color: #666666;
 $text-color-dark: #222222;
 $text-color-light: #959595;
