--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -34,8 +34,8 @@
 <section class="section-sm pb-0">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-lg-8 text-center">
-        <h2 class="mb-4">Hi Write To Me</h2>
+       <!--<div class="col-lg-8 text-center">
+       <h2 class="mb-4">Hi Write To Me</h2>
         <form action="#" method="POST" class="row">
           <div class="col-lg-6">
             <input type="text" class="form-control mb-4" id="name" name="name" placeholder="Your Name">
@@ -53,7 +53,7 @@
             <button type="submit" class="btn btn-primary">send message</button>
           </div>
         </form>
-      </div>
+      </div>-->
     </div>
   </div>
 </section>
